ui fixes(scroll bar and about content clipping fixed)

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@ body {
   padding: 0 !important;
   margin: 0 !important;
   max-width: 100vw !important;
-  overflow-x: clip !important;
+  overflow: clip !important;
+  max-height: 100vh;
   background-color: #000 !important;
   color: white;
 }
